[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "mediacast-displaycatalog"
version = "0.1.0"
description = "Vendor command catalog + version matcher + protocol probe for IP-managed displays (Samsung MDC, LG webOS, NEC NaViSet, Sony Bravia, PJLink projectors)."
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Robare Pruyn", email = "robare@mediacastnet.com" },
    { name = "Mediacast Network Solutions" },
]
requires-python = ">=3.9"
keywords = ["display", "av", "samsung-mdc", "pjlink", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: System :: Hardware",
]

[project.urls]
Homepage = "https://github.com/Mediacastnet/mediacast-displaycatalog"
Repository = "https://github.com/Mediacastnet/mediacast-displaycatalog"
Issues = "https://github.com/Mediacastnet/mediacast-displaycatalog/issues"
Changelog = "https://github.com/Mediacastnet/mediacast-displaycatalog/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["python"]
module-name = "mediacast_displaycatalog._native"
python-source = "python"
strip = true
